# ospd-example-scanner

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py
config/: ospd.conf
ospd_example_scanner/: daemon.py
ospd_wrapper/: daemon.py  daemon.py~
