[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "ospd-wrapper-template"
version = "21.4.0.dev1"
description = "ospd based wrapper template"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers=[
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
keywords = [
  "Greenbone Vulnerability Management",
  "Vulnerability Scanning",
  "OSP",
  "Open Scanner Protocol",
]

packages = [
  { include = "ospd_wrapper"},
  { include = "tests", format = "sdist" },
  { include = "CHANGELOG.md", format = "sdist"},
  { include = "COPYING", format = "sdist"},
  { include = "poetry.lock", format = "sdist"},
  { include = "poetry.toml", format = "sdist"},
  { include = "setup.py", format = "sdist"},
  { include = "MANIFEST.in", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.7"
ospd = {git = "https://github.com/greenbone/ospd.git", branch = "master"}

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
rope = "^0.18.0"
autohooks-plugin-pylint = "^1.2.0"
autohooks-plugin-black = {version = "^1.2.0", python = "^3.7"}
black = {version = "20.8b1", python = "^3.7"}
pontos = "^0.3.0"


[tool.poetry.scripts]
ospd-wrapper = "ospd_wrapper.daemon:main"

[tool.black]
line-length = 80
target-version = ['py37', 'py38']
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = ['autohooks.plugins.black']

[tool.pontos.version]
version-module-file = "ospd_wrapper/__version__.py"
